# eskeylation-web

./: .env.example  .gitignore  CLAUDE.md  Eskaylation_Ke_hoach_trien_khai_v2.docx  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  integration.yml
alembic/: env.py
alembic/versions/: 3e6a7a439b15_phase2_timestamps_to_timestamptz.py  4750def72355_phase1_users_contents_media_content_.py  87d03e11b41d_phase2_full_text_search_vector_gin_index.py
app/: config.py  db.py  dependencies.py  main.py
app/models/: __init__.py  content.py  enums.py  media.py  mixins.py  user.py
app/routers/: admin_content.py  auth.py  media.py  public.py
app/schemas/: admin.py  media.py  pagination.py  public.py
app/services/: content_admin.py  content_query.py  media.py  sanitize.py  security.py  serialize.py  slug.py  storage.py
app/workers/: celery_app.py  tasks.py
docs/: db-review.md
frontend/: index.html  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  types.ts  useApi.ts
frontend/src/components/: EmptyState.css  EmptyState.tsx  Layout.css  Layout.tsx  MediaFrame.css  MediaFrame.tsx  Modal.css  Modal.tsx  MusicCard.css  MusicCard.tsx  PillNav.css  PillNav.tsx  PostCard.css  PostCard.tsx  PostGallery.css  PostGallery.tsx  SearchBar.css  SearchBar.tsx  VideoModal.css  VideoModal.tsx
frontend/src/pages/: ContentList.tsx  Feed.css  Feed.tsx  Home.css  Home.tsx  Music.css  Music.tsx  MusicAll.css  MusicAll.tsx
frontend/src/styles/: tokens.css
skills/: SKILL.md  rules.md
tests/: conftest.py  test_auth_api.py  test_cms_api.py  test_health.py  test_media_api.py  test_models.py  test_public_api.py  test_sanitize.py  test_security.py  test_security_api.py  test_slug.py  test_storage.py
